# markatfiyati.org.tr_api_project

./: README.md  main.py  patates.xlsx  pyproject.toml  yapılacaklar.md
fastapi/: main.py
mcp/: main.py
utils/: api_client.py  data_processor.py  file_saver.py
